--- a/Content/game.css
+++ b/Content/game.css
@@ -1,4 +1,5 @@
 #canvas
 {
-    border: solid, black, 1px;
+    border: solid, black, 5px;
+    background-image: url(../Assets/Images/classroom_background.png);
 }
